Moved and renamed static-header-footer. Added gulp task and header/footer demo page.

--- a/backend/views/layout/base.pug
+++ b/backend/views/layout/base.pug
@@ -33,6 +33,7 @@ html
             {href: '/forms-inputs/', text: 'Forms and inputs'},
             {href: '/blocks-media/', text: 'Blocks and media'},
             {href: '/patterns/', text: 'Patterns'},
+            {href: '/shared-header-footer/', text: 'Shared Header & Footer'},
           ]
           navLinks.forEach((item, i, arr) => {
             let classes = []
