--- a/shared-header-footer-sass/_colours.scss
+++ b/shared-header-footer-sass/_colours.scss
@@ -21,6 +21,7 @@ $active-blue-disabled: #9bc6e9; // rgb(155, 198, 233)
 $dark-blue:            #132965; // rgb( 19,  41, 101)
 $dark-navy:            #160d37; // rgb( 22,  13,  55)
 $great-blue:           #1e1348; // rgb( 30,  19,  72)
+$lightened-great-blue: #3b3458; // only used in footer
 $mid-blue:             #00549f; // rgb(  0,  84, 159)
 
 // Aqua
@@ -33,4 +34,3 @@ $focus-yellow:         #ffbf47; // rgb(255, 191,  71)
 $purple:               #4f0b7b; // rgb( 79,  11, 123)
 $stone:                #dfd5c5; // rgb(223, 213, 197)
 $stone-light:           #f5f2ed; // rgb(245, 242, 237)
-
