--- a/shared-header-footer-sass/_footer.scss
+++ b/shared-header-footer-sass/_footer.scss
@@ -61,7 +61,7 @@
       display: block;
       position: relative;
       top: -20px;
-      width: 45px;
+      width: 60px;
     }
   }
 
@@ -69,6 +69,7 @@
     clear: both;
     a {
       @include body-s;
+      font-size: 13px;
       white-space: nowrap;
       display: inline;
     }
@@ -79,26 +80,24 @@
     }
 
     ul {
-      border-top: $mid-grey solid 1px;
+      border-top: $lightened-great-blue solid 1px;
       padding: $spacing-3 0;
     }
   }
 }
 
 .global-footer {
+  height: 35px;
   background-color: $dark-navy;
-  color: $white;
+  color: $light-grey;
   padding-bottom: 5px;
   padding-top: 5px;
 
-  img {
-    vertical-align: middle;
-  }
-
   span {
     @include body-s-mob;
+    font-size: 12px;
     float: right;
-    line-height: 1.9em;
+    line-height: 35px;
   }
 }
 
@@ -117,7 +116,7 @@
       width: 50%;
 
       &:nth-child(even) {
-        border-left: $mid-grey solid 1px;
+        border-left: $lightened-great-blue solid 1px;
         left: -1px;
         padding-left: $spacing-3;
         &:after {
@@ -126,7 +125,7 @@
       }
 
       &:nth-child(odd) {
-        border-right: $mid-grey solid 1px;
+        border-right: $lightened-great-blue solid 1px;
         clear: left;
         padding-right: $spacing-3;
       }
@@ -134,7 +133,7 @@
       &:nth-child(3),
       &:nth-child(4) {
         &:before {
-          border-top: $mid-grey solid 1px;
+          border-top: $lightened-great-blue solid 1px;
           content: '';
           display: block;
           left: 0;
@@ -147,6 +146,7 @@
 
     .list-heading {
       @include body-s;
+      font-weight: 600;
     }
 
     .site-links {
@@ -155,7 +155,7 @@
       }
 
       ul {
-        border-color: $mid-grey;
+        border-color: $lightened-great-blue;
         padding: 20px $spacing-3;
         text-align: center;
       }
@@ -169,7 +169,6 @@
     span {
       display: block;
       float: none;
-      padding-top: 5px;
     }
   }
 }
