--- a/shared-header-footer-sass/_header.scss
+++ b/shared-header-footer-sass/_header.scss
@@ -56,7 +56,7 @@
 
   .account-links {
     display: inline-block;
-    margin-right: $spacing-3 + 25px;
+    margin-right: $spacing-4;
     li {
       display: inline-block;
       padding: 7px 0 4px 0;
