Fixed modal overlay styling

--- a/shared-header-footer-sass/_effects.scss
+++ b/shared-header-footer-sass/_effects.scss
@@ -47,11 +47,11 @@
 }
 
 .Modal-Overlay {
-  background-color: $mid-grey;
+  background-color: $black;
   display: none;
   height: 100%;
   left: 0;
-  opacity: 0.8;
+  opacity: 0.4;
   position: absolute;
   top: 0;
   width: 100%;
