--- a/shared-header-footer-sass/_header.scss
+++ b/shared-header-footer-sass/_header.scss
@@ -139,15 +139,9 @@
 
 // TABLET
 @media screen and (max-width: 767px) {
-  #header-bar {
-    .partof {
-      display: none;
-    }
-  }
-
-  #header-menu {
+  #header {
     .container {
-      margin: 0;
+      margin: 0 15px;
     }
   }
 }
@@ -167,8 +161,10 @@
 
 // MOBILE + logo breakpoint
 @media screen and (max-width: 450px) {
-  #header-bar {
+  #header {
     height: 115px;
+  }
+  #header-bar {
     .container {
       overflow: auto;
     }
