Fixed some styling bugs

--- a/shared-header-footer-sass/_header.scss
+++ b/shared-header-footer-sass/_header.scss
@@ -144,6 +144,11 @@
       margin: 0 15px;
     }
   }
+  #header-menu {
+    .container {
+      margin: 0;
+    }
+  }
 }
 @media screen and (max-width: 600px) {
   #header-bar {
