--- a/shared-header-footer-sass/_menu.scss
+++ b/shared-header-footer-sass/_menu.scss
@@ -220,6 +220,7 @@
         color: $white;
         margin: 0 $spacing-3;
         padding: $spacing-3-m 0;
+        height: auto;
       }
 
       li {
