--- a/shared-header-footer-sass/_language-selector.scss
+++ b/shared-header-footer-sass/_language-selector.scss
@@ -45,7 +45,7 @@
   }
 
   .SelectTraker-Tracker {
-    background-image: url(/shared-header-footer/eig-world-language-icon.svg);
+    background-image: url(/static/images/international/language-icon.svg);
     background-position: left center;
     background-repeat: no-repeat;
     background-size: 20px;
@@ -97,20 +97,23 @@
     margin-bottom: 0;
   }
 
-	.domestic-redirect {
-		padding-top: $spacing-4;
-		span {
-			display: block;
-		}
-	}
+  .domestic-redirect {
+    padding-top: $spacing-4;
+    span {
+      display: block;
+    }
+  }
 
+  .languages {
+    border-bottom: $light-grey solid 1px;
+    padding-bottom: $spacing-4;
+  }
 }
 
 
 .LanguageSelectorDialog-Modal {
   a {
-    @include body-m;
-    text-decoration: underline;
+    font-size: 21px;
   }
 
   li {
@@ -118,15 +121,9 @@
     margin-bottom: $spacing-3;
   }
 
-  h2 {
-    @include heading-m;
-    font-weight: 500;
-    display: block;
-    margin-bottom: $spacing-4;
-  }
-
   p {
-    @include body-m;
+    @include body-xl;
+    display: block;
     margin-bottom: $spacing-3;
   }
 
@@ -147,12 +144,19 @@
   }
 
   .languages {
+    border-bottom: none;
+    border-right: $light-grey solid 1px;
+    float: left;
+    margin-bottom: $spacing-3;
     overflow: hidden;
+    padding: 0 $spacing-3 0 0;
+    width: $cols-8;
   }
 
   .domestic-redirect {
     float: right;
     padding-left: $spacing-3;
+    padding-top: 71px;
     width: $cols-4;
 
     p {
@@ -162,25 +166,18 @@
 
     span {
       @include body-s;
+      display: block;
+      max-width: 215px;
+      padding-top: $spacing-4;
     }
   }
-
-  // Country flags
-  .br { background-image: url(/shared-header-footer/flags/br.svg); }
-  .cn { background-image: url(/shared-header-footer/flags/cn.svg); }
-  .de { background-image: url(/shared-header-footer/flags/de.svg); }
-  .es { background-image: url(/shared-header-footer/flags/es.svg); }
-  .in { background-image: url(/shared-header-footer/flags/in.svg); }
-  .jp { background-image: url(/shared-header-footer/flags/jp.svg); }
-  .us { background-image: url(/shared-header-footer/flags/us.svg); }
-  .uk { background-image: url(/shared-header-footer/flags/uk.svg); }
 }
 
 #header-bar .LanguageSelectorDialog-Tracker {
   @include body-s;
   font-weight: bold;
-  background-image: url(/shared-header-footer/eig-world-language-icon.svg);
-  background-position: 0px 7px;
+  background-image: url(/static/images/international/language-icon.svg);
+  background-position: 0px 8px;
   background-repeat: no-repeat;
   background-size: 20px;
   color: $white;
@@ -188,7 +185,8 @@
   display: inline-block;
   height: 27px;
   line-height: 27px;
-  padding: 5px 0 0 25px;
+  min-height: 30px;
+  padding: 5px 3px 3px 25px;
   text-decoration: none;
 
   &:hover {
@@ -197,7 +195,7 @@
   }
 
   .label {
-		font-weight: normal;
+    font-weight: normal;
     text-transform: capitalize;
   }
 
@@ -270,8 +268,8 @@
   }
 
   .LanguageSelectorDialog-Modal {
-    h2 {
-      @include heading-m-mob;
+    p {
+      @include body-l;
     }
 
     .content {
@@ -305,6 +303,14 @@
         left: 0;
         top: $spacing-4-m;
       }
+    }
+  }
+
+  .LanguageSelectorDialog-Tracker {
+    .label,
+    .lang::after {
+      position: absolute;
+      z-index: -1;
     }
   }
 }
