Fix red border on menu headers disappearing

--- a/shared-header-footer-sass/_menu.scss
+++ b/shared-header-footer-sass/_menu.scss
@@ -121,6 +121,9 @@
       &::after {
         @include up-chevron-1($stone);
       }
+      &:before {
+          @include great-red-trim;
+        }
     }
 
     &:after {
@@ -287,6 +290,7 @@
       }
 
       &.active:before {
+        background-color: transparent;
         font-family: "Roboto", arial, helvetica, sans-serif;
         content: '_';
         font-size: 35px;
