Fix arrow size on exopps

--- a/shared-header-footer-sass/_menu.scss
+++ b/shared-header-footer-sass/_menu.scss
@@ -120,6 +120,7 @@
       outline: none;
       &::after {
         @include up-chevron-1($stone);
+        box-sizing: initial;
       }
       &:before {
           @include great-red-trim;
