Update sign in/register colour to match designs

--- a/shared-header-footer-sass/_header.scss
+++ b/shared-header-footer-sass/_header.scss
@@ -64,7 +64,7 @@
   }
 
   .anonymous {
-    color: $focus-yellow;
+    color: #e9e2d6;
   }
 
   .signout {
@@ -91,7 +91,7 @@
 
   a.signin {
     &:before {
-      @include separator($focus-yellow);
+      @include separator(#e9e2d6);
     }
   }
 }
