Fix menu arrow sizing on exopps

--- a/shared-header-footer-sass/_menu.scss
+++ b/shared-header-footer-sass/_menu.scss
@@ -128,12 +128,14 @@
   }
 
   .list-header {
+    &:after {
+      box-sizing: initial;
+    }
     &.active {
       background-color: $mid-blue;
       outline: none;
       &::after {
         @include up-chevron-1($stone);
-        box-sizing: initial;
       }
       &:before {
           @include great-red-trim;
